<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/backgroundColor">

    <EditText
        android:id="@+id/customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customer_name" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity_number_of_cupcakes"
        android:inputType="number" />

    <Spinner
        android:id="@+id/cupcake_flavor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:prompt="@string/cupcake_flavor_prompt" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_order"
        android:layout_marginTop="16dp" />
</LinearLayout>
