<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cupcake_flavor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cupcake_flavor" />

    <TextView
        android:id="@+id/order_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_type" />
</LinearLayout>
